Added TBBlue Multiface emulation
Added OSD Adventure Text Keyboard, useful for having typical words on Adventure Text Games (and of course any other kind of games and programs)
Added tool to export vocabulary from a PAWS/QUILL/GAC game to list of words on OSD Adventure Text Keyboard

Improved debugger:
*Now you can use every register, variable, number on any position of a condition (left, right), so the following breakpoint conditions are now valid:
32768>PC
HL=DE
3=PC
DE>IX
etc...
*Optimized debugger so common conditions like PC=X, MRA=X or MWA=X use lots of less cpu than before
*Added new kind of breakpoints, "memory breakpoints", which behave like MRA and MWA conditions but a lot faster than them
*Added bitwise operators AND (&), OR (|), XOR (^) when using registers/variables breakpoints/watches
*Breakpoints actions do not reset keyboard 
*New pseudo variables:
**OUTFIRED: returns 1 if last Z80 opcode was an OUT operation
**INFIRED: returns 1 if last Z80 opcode was an IN operation
**INTFIRED: returns 1 when an interrupt has been generated

Improved hexdump menu: now you can edit memory. Now the menu is called "Hexadecimal Editor"

Improved menu: 
* menu windows: now can have more lines than 22, doing scroll
* now you can write any ascii character on the menu
* now you can use binary numbers on expressions
* you can now scroll with mouse on windows with text contents and file selector menus, by clicking the right progress symbol (*)
* now you can move cursor up/down with mouse on windows with text contents and file selector by clicking new arrow buttons
* new file expander on file selector menu, using space key, for the following file types : .tap, .tzx, .dsk, .trd, .mdf, .hdf, .P, .O, Z88 Cards (.epr, .eprom, .flash)

Improved native snapshot format (ZSF):
* Added divmmc/divide state save

Fixed autoload tape on TBBlue
Fixed bug when smartload and selecting an unknown file type: if you cancel it, the inserted tape was modified